compute loglik given coef

--- a/python/lib/mple_learn_lib.ipynb
+++ b/python/lib/mple_learn_lib.ipynb
@@ -2,17 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "fecd8519",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "select optimal lambda\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"select optimal lambda\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "09562e81",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import utils\n",
-    "from gfl import *\n",
+    "# from gfl import *\n",
     "from scipy.linalg import block_diag\n",
     "from functools import partial\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "160e28f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import rpy2.robjects as robjects\n",
+    "from rpy2.robjects.packages import importr\n",
+    "from rpy2.robjects import Formula\n",
+    "from rpy2.robjects import numpy2ri\n",
+    "numpy2ri.activate()\n",
+    "\n",
+    "\n",
+    "network = importr(\n",
+    "    'network',\n",
+    "    on_conflict=\"warn\",\n",
+    "    robject_translations={\n",
+    "        'as.tibble.network': 'as_tibble_network',\n",
+    "        'as_tibble.network': 'as_tibble_network_'\n",
+    "    })\n",
+    "\n",
+    "ergm = importr('ergm')\n",
+    "tergm = importr('tergm')\n",
+    "readRDS = robjects.r['readRDS']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "eb0a5c91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run /Users/hangjianli/Documents/research/change_point/python/lib/gfl_lib.ipynb"
    ]
   },
   {
@@ -36,7 +91,7 @@
     "        gfl_tol=1e-6,\n",
     "        gfl_maxit=1000,\n",
     "        solver=\"newton\",\n",
-    "        verbose=1\n",
+    "        verbose=0,\n",
     "    ):\n",
     "\n",
     "        self.admm_alpha = admm_alpha\n",
@@ -53,11 +108,11 @@
     "        self.solver = solver\n",
     "        self.mu = None\n",
     "\n",
-    "    def load_data(self, h, y, t, p):\n",
+    "    def load_H_y(self, h, y):\n",
     "        self.H = h #  T x E x p\n",
     "        self.y = y\n",
-    "        self.t = t\n",
-    "        self.p = p\n",
+    "        self.t = H.shape[0]\n",
+    "        self.p = H.shape[2]\n",
     "\n",
     "\n",
     "    def mple_solution_path(self, lam_range=[0.01, 100], bins=50, solver='newton'):\n",
@@ -172,11 +227,8 @@
     "\n",
     "\n",
     "    def compute_bic(self, est_chapts):\n",
+    "        #TODO\n",
     "        pass\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "    def theta_update(self, z, u, theta):\n",
@@ -196,8 +248,8 @@
     "            grad_f = g(theta)\n",
     "\n",
     "            # delta_theta = (-np.linalg.inv(hess_f) @ grad_f).reshape(theta.shape)\n",
-    "            # diagonal hessian\n",
-    "            hess = np.diagonal(hess_f)\n",
+    "            # diagonal hessian (quasi-Newton)\n",
+    "            hess = np.diagonal(hess_f) \n",
     "            delta_theta = (-grad_f / hess).reshape(theta.shape)\n",
     "\n",
     "            converged = np.abs(np.sum(delta_theta.flatten()) / 2.)\n",
@@ -213,6 +265,7 @@
     "\n",
     "        return theta  # T x p\n",
     "\n",
+    "    \n",
     "    def theta_update_hess_f(self, theta):\n",
     "        \"\"\"Update the Hessian in Newton's step\n",
     "\n",
@@ -279,16 +332,73 @@
     "        return -np.sum(predict_1 + predict_0) + self.admm_alpha / 2 * penalty\n",
     "\n",
     "\n",
-    "def compute_mle():\n",
-    "    pass\n",
-    "\n",
-    "\n",
     "def sigmoid(x):\n",
     "    return 1 / (1 + safe_exp(-x))\n",
     "\n",
     "\n",
     "def safe_exp(x):\n",
     "    return np.exp(x.clip(-50., 50.))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0d941da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_data(args):\n",
+    "    logging.info(\"Loading network statistics and edge data...\")\n",
+    "    experiment_dir = args[\"inputdir\"] + ('' if args[\"inputdir\"].endswith('/') else '/')\n",
+    "\n",
+    "    with open(experiment_dir + 'args/args.txt', 'r') as f: # comes from make_data.py\n",
+    "        sim_args_str = f.read()\n",
+    "\n",
+    "    sim_args = ast.literal_eval(sim_args_str)\n",
+    "    p = len(sim_args['form_terms']) + len(sim_args['diss_terms'])\n",
+    "\n",
+    "    H = np.loadtxt(experiment_dir + sim_args['data_name'] + '_H.txt') # suff stats\n",
+    "    y = np.loadtxt(experiment_dir + sim_args['data_name'] + '_y.txt') # networks t x n^2\n",
+    "\n",
+    "    t = H.shape[0]\n",
+    "    H = H.reshape((t, -1, p)) # t x n^2(E) x p\n",
+    "    n = np.sqrt(H.shape[1]).astype(int)\n",
+    "    logging.info(f\"Data has dimension (t, n, p): ({t}, {n}, {p})\")\n",
+    "    \n",
+    "    return H, y, experiment_dir, sim_args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f3fab324",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nwpos = network.network(ypos)\n",
+    "nwneg = network.network(yneg)\n",
+    "\n",
+    "fml_form = Formula('nwf ~ ' + ' + '.join(form_terms))\n",
+    "fml_diss = Formula('nwd ~ ' + ' + '.join(diss_terms))\n",
+    "fml_form.environment['nwf'] = nwpos\n",
+    "fml_diss.environment['nwd'] = nwneg\n",
+    "\n",
+    "# compute change statistic with correction\n",
+    "_lr_form = ergm.ergmMPLE(fml_form, output='array')\n",
+    "lr_form_delta = np.array(_lr_form.rx('predictor')).squeeze(axis=0)\n",
+    "_lr_diss = ergm.ergmMPLE(fml_diss, output='array')\n",
+    "lr_diss_delta = np.array(_lr_diss.rx('predictor')).squeeze(axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "955cabd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_log_likelihood():\n",
+    "    pass\n"
    ]
   }
  ],
