added new ergm experiments

--- a/python/exe/make_data.ipynb
+++ b/python/exe/make_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "47ee4b06",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "8a632cba",
    "metadata": {},
    "outputs": [],
@@ -145,8 +145,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49840f5f",
+   "metadata": {},
+   "source": [
+    "### T, n, $\\rho$ =  (500, 100, 0)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "5fe88e54",
    "metadata": {},
    "outputs": [],
@@ -162,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "c7dd5260",
    "metadata": {},
    "outputs": [
@@ -176,8 +184,8 @@
       "Saving change statistics...\n",
       "shape of H: (500, 10000, 4)\n",
       "shape of y: (500, 10000)\n",
-      "CPU times: user 43.9 s, sys: 620 ms, total: 44.5 s\n",
-      "Wall time: 44.6 s\n"
+      "CPU times: user 36 s, sys: 838 ms, total: 36.8 s\n",
+      "Wall time: 36.8 s\n"
      ]
     }
    ],
@@ -187,11 +195,320 @@
     "input_data = conf[\"data_name\"] + ('' if conf[\"data_name\"].endswith('.rds') else '.rds')\n",
     "H_outfile = output_dir + conf[\"data_name\"] + \"_H.txt\"\n",
     "y_outfile = output_dir + conf[\"data_name\"] + \"_y.txt\"\n",
-    "data = readRDS(\"../../data/\" + input_data)\n",
+    "data = readRDS(\"../../data/sbm/\" + input_data)\n",
     "\n",
     "args_dir = utils.make_directory(output_dir, 'args')\n",
     "utils.save_args(conf, args_dir + \"args.txt\")\n",
     "save_H_y(data, conf, H_outfile, y_outfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd5e358e",
+   "metadata": {},
+   "source": [
+    "### T, n, $\\rho$ =  (500, 100, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6204beff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = {\n",
+    "    \"outdir\": \"../../output/sbm2\",\n",
+    "    \"data_name\": \"sbm_rho05n100t500.rds\",\n",
+    "    \"form_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"diss_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"true_change_points\": [167, 333],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ff65d282",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time series length: 500\n",
+      "network size: 100 x 100\n",
+      "statistics dimension: 4\n",
+      "Saving change statistics...\n",
+      "shape of H: (500, 10000, 4)\n",
+      "shape of y: (500, 10000)\n",
+      "CPU times: user 35.7 s, sys: 787 ms, total: 36.5 s\n",
+      "Wall time: 36.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "output_dir = conf[\"outdir\"] + ('' if conf[\"outdir\"].endswith('/') else '/')\n",
+    "input_data = conf[\"data_name\"] + ('' if conf[\"data_name\"].endswith('.rds') else '.rds')\n",
+    "H_outfile = output_dir + conf[\"data_name\"] + \"_H.txt\"\n",
+    "y_outfile = output_dir + conf[\"data_name\"] + \"_y.txt\"\n",
+    "data = readRDS(\"../../data/sbm/\" + input_data)\n",
+    "\n",
+    "args_dir = utils.make_directory(output_dir, 'args')\n",
+    "utils.save_args(conf, args_dir + \"args.txt\")\n",
+    "save_H_y(data, conf, H_outfile, y_outfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a011d0d8",
+   "metadata": {},
+   "source": [
+    "### T, n, $\\rho$ =  (500, 100, 0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "05c9d851",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = {\n",
+    "    \"outdir\": \"../../output/sbm3\",\n",
+    "    \"data_name\": \"sbm_rho09n100t500.rds\",\n",
+    "    \"form_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"diss_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"true_change_points\": [167, 333],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4c32a158",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time series length: 500\n",
+      "network size: 100 x 100\n",
+      "statistics dimension: 4\n",
+      "Saving change statistics...\n",
+      "shape of H: (500, 10000, 4)\n",
+      "shape of y: (500, 10000)\n",
+      "CPU times: user 35.5 s, sys: 769 ms, total: 36.3 s\n",
+      "Wall time: 36.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "output_dir = conf[\"outdir\"] + ('' if conf[\"outdir\"].endswith('/') else '/')\n",
+    "input_data = conf[\"data_name\"] + ('' if conf[\"data_name\"].endswith('.rds') else '.rds')\n",
+    "H_outfile = output_dir + conf[\"data_name\"] + \"_H.txt\"\n",
+    "y_outfile = output_dir + conf[\"data_name\"] + \"_y.txt\"\n",
+    "data = readRDS(\"../../data/sbm/\" + input_data)\n",
+    "\n",
+    "args_dir = utils.make_directory(output_dir, 'args')\n",
+    "utils.save_args(conf, args_dir + \"args.txt\")\n",
+    "save_H_y(data, conf, H_outfile, y_outfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad603fef",
+   "metadata": {},
+   "source": [
+    "### T, n, $\\rho$ =  (500, 200, 0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1bcbd842",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = {\n",
+    "    \"outdir\": \"../../output/sbm4\",\n",
+    "    \"data_name\": \"sbm_rho09n200t500.rds\",\n",
+    "    \"form_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"diss_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"true_change_points\": [167, 333],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3c2aefa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time series length: 500\n",
+      "network size: 200 x 200\n",
+      "statistics dimension: 4\n",
+      "Saving change statistics...\n",
+      "shape of H: (500, 40000, 4)\n",
+      "shape of y: (500, 40000)\n",
+      "CPU times: user 3min 5s, sys: 4.26 s, total: 3min 10s\n",
+      "Wall time: 3min 10s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "output_dir = conf[\"outdir\"] + ('' if conf[\"outdir\"].endswith('/') else '/')\n",
+    "input_data = conf[\"data_name\"] + ('' if conf[\"data_name\"].endswith('.rds') else '.rds')\n",
+    "H_outfile = output_dir + conf[\"data_name\"] + \"_H.txt\"\n",
+    "y_outfile = output_dir + conf[\"data_name\"] + \"_y.txt\"\n",
+    "data = readRDS(\"../../data/sbm/\" + input_data)\n",
+    "\n",
+    "args_dir = utils.make_directory(output_dir, 'args')\n",
+    "utils.save_args(conf, args_dir + \"args.txt\")\n",
+    "save_H_y(data, conf, H_outfile, y_outfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "859d180d",
+   "metadata": {},
+   "source": [
+    "### T, n, $\\rho$ =  (500, 200, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "68382d34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = {\n",
+    "    \"outdir\": \"../../output/sbm5\",\n",
+    "    \"data_name\": \"sbm_rho05n200t500.rds\",\n",
+    "    \"form_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"diss_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"true_change_points\": [167, 333],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b35e4515",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time series length: 500\n",
+      "network size: 200 x 200\n",
+      "statistics dimension: 4\n",
+      "Saving change statistics...\n",
+      "shape of H: (500, 40000, 4)\n",
+      "shape of y: (500, 40000)\n",
+      "CPU times: user 2min 54s, sys: 2.62 s, total: 2min 56s\n",
+      "Wall time: 2min 57s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "output_dir = conf[\"outdir\"] + ('' if conf[\"outdir\"].endswith('/') else '/')\n",
+    "input_data = conf[\"data_name\"] + ('' if conf[\"data_name\"].endswith('.rds') else '.rds')\n",
+    "H_outfile = output_dir + conf[\"data_name\"] + \"_H.txt\"\n",
+    "y_outfile = output_dir + conf[\"data_name\"] + \"_y.txt\"\n",
+    "data = readRDS(\"../../data/sbm/\" + input_data)\n",
+    "\n",
+    "args_dir = utils.make_directory(output_dir, 'args')\n",
+    "utils.save_args(conf, args_dir + \"args.txt\")\n",
+    "save_H_y(data, conf, H_outfile, y_outfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91f65443",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### T, n, $\\rho$ =  (500, 200, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1abb4472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = {\n",
+    "    \"outdir\": \"../../output/sbm6\",\n",
+    "    \"data_name\": \"sbm_rho00n200t500.rds\",\n",
+    "    \"form_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"diss_terms\": [\"edges\", \"mutual\"],\n",
+    "    \"true_change_points\": [167, 333],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f53eb9cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time series length: 500\n",
+      "network size: 200 x 200\n",
+      "statistics dimension: 4\n",
+      "Saving change statistics...\n",
+      "shape of H: (500, 40000, 4)\n",
+      "shape of y: (500, 40000)\n",
+      "CPU times: user 3min 10s, sys: 3.34 s, total: 3min 13s\n",
+      "Wall time: 3min 15s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "output_dir = conf[\"outdir\"] + ('' if conf[\"outdir\"].endswith('/') else '/')\n",
+    "input_data = conf[\"data_name\"] + ('' if conf[\"data_name\"].endswith('.rds') else '.rds')\n",
+    "H_outfile = output_dir + conf[\"data_name\"] + \"_H.txt\"\n",
+    "y_outfile = output_dir + conf[\"data_name\"] + \"_y.txt\"\n",
+    "data = readRDS(\"../../data/sbm/\" + input_data)\n",
+    "\n",
+    "args_dir = utils.make_directory(output_dir, 'args')\n",
+    "utils.save_args(conf, args_dir + \"args.txt\")\n",
+    "save_H_y(data, conf, H_outfile, y_outfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b3cf6e0",
+   "metadata": {},
+   "source": [
+    "# ERGM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75159ce7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
