--- a/python/lib/make_data_lib.ipynb
+++ b/python/lib/make_data_lib.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "e2ce5709",
+   "cell_type": "raw",
+   "id": "9188a16c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import argparse\n",
@@ -37,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_change_statistics(yt0, yt1, form_terms, diss_terms):\n",
+    "def compute_change_statistics(yt0, yt1, form_terms, diss_terms, exogenous=None):\n",
     "    \"\"\" Compute the change stat in mple for all edges  \"\"\"\n",
     "    # 1. take union.\n",
     "    # 2. run ergmMPLE.\n",
@@ -45,8 +43,13 @@
     "\n",
     "    ypos = np.logical_or(yt0, yt1).astype(int)\n",
     "    yneg = np.logical_and(yt0, yt1).astype(int)\n",
-    "    nwpos = network.network(ypos)\n",
-    "    nwneg = network.network(yneg)\n",
+    "    nwpos = network.network(ypos, directed=False)\n",
+    "    nwneg = network.network(yneg, directed=False)\n",
+    "    \n",
+    "    # add exogenous variables to nodes\n",
+    "    if exogenous is not None:\n",
+    "        nwpos = network.set_vertex_attribute(nwpos, 'Sex', exogenous)\n",
+    "        nwneg = network.set_vertex_attribute(nwneg, 'Sex', exogenous)\n",
     "\n",
     "    fml_form = Formula('nwf ~ ' + ' + '.join(form_terms))\n",
     "    fml_diss = Formula('nwd ~ ' + ' + '.join(diss_terms))\n",
@@ -59,6 +62,15 @@
     "    _lr_diss = ergm.ergmMPLE(fml_diss, output='array')\n",
     "    lr_diss_delta = np.array(_lr_diss.rx('predictor')).squeeze(axis=0)\n",
     "\n",
+    "    # for undirected graphs, fill nan in lower-triangle section\n",
+    "    form_inds = np.where(np.isnan(lr_form_delta))\n",
+    "    for idx in zip(*form_inds):\n",
+    "        lr_form_delta[idx] = lr_form_delta[idx[1], idx[0], idx[2]]\n",
+    "    \n",
+    "    diss_inds = np.where(np.isnan(lr_diss_delta))\n",
+    "    for idx in zip(*diss_inds):\n",
+    "        lr_diss_delta[idx] = lr_diss_delta[idx[1], idx[0], idx[2]]\n",
+    "    \n",
     "    # correct and set diagonal to 0\n",
     "    for k in range(len(form_terms)):\n",
     "        lr_form_delta[:, :, k][yt0 == 1] = 0\n",
@@ -70,8 +82,12 @@
     "    return lr_form_delta, lr_diss_delta  # n x n x p1 (p2)\n",
     "\n",
     "\n",
-    "def save_H_y(data, conf, H_outfile, y_outfile):\n",
-    "    \"\"\"Generate change statistics from temporal network data The script generates and save H.txt and y.txt\"\"\"\n",
+    "def save_H_y(data, conf, H_outfile, y_outfile, exogenous=None):\n",
+    "    \"\"\"\n",
+    "    Generate change statistics from temporal network data The script generates and save H.txt and y.txt\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
     "    data = np.array(data).astype(int)\n",
     "    t = len(data)\n",
     "    n = len(data[0])\n",
@@ -80,6 +96,9 @@
     "    print(f\"time series length: {t}\")\n",
     "    print(f\"network size: {n} x {n}\")\n",
     "    print(f\"statistics dimension: {p}\")\n",
+    "    print(f\"form terms are: {conf['form_terms']}\")\n",
+    "    print(f\"diss terms are: {conf['diss_terms']}\")\n",
+    "    \n",
     "\n",
     "    H = np.zeros((t, n ** 2, p))  # compute H: T x E x p\n",
     "    for i in range(t):\n",
@@ -88,13 +107,18 @@
     "                yt0=data[i],\n",
     "                yt1=data[i + 1],\n",
     "                form_terms=conf[\"form_terms\"],\n",
-    "                diss_terms=conf[\"diss_terms\"])\n",
+    "                diss_terms=conf[\"diss_terms\"],\n",
+    "                exogenous=exogenous,\n",
+    "            )\n",
     "        else:\n",
     "            lr_form, lr_diss = compute_change_statistics(\n",
     "                yt0=data[i - 1],\n",
     "                yt1=data[i],\n",
     "                form_terms=conf[\"form_terms\"],\n",
-    "                diss_terms=conf[\"diss_terms\"])\n",
+    "                diss_terms=conf[\"diss_terms\"],\n",
+    "                exogenous=exogenous,\n",
+    "            )\n",
+    "#         print(lr_form, lr_diss)\n",
     "        H[i, :, :] = np.concatenate((lr_form, lr_diss), axis=2).reshape(n ** 2, p)  # row-first fill\n",
     "\n",
     "    y = data.reshape(t, -1)\n",
