--- a/python/lib/mple_learn_lib.ipynb
+++ b/python/lib/mple_learn_lib.ipynb
@@ -2,24 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fecd8519",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "select optimal lambda\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"select optimal lambda\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "09562e81",
    "metadata": {},
@@ -347,13 +329,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_data(args):\n",
+    "def load_data(args):\n",
     "    logging.info(\"Loading network statistics and edge data...\")\n",
-    "    experiment_dir = args[\"inputdir\"] + ('' if args[\"inputdir\"].endswith('/') else '/')\n",
+    "    experiment_dir = args['outdir'] + ('' if args['outdir'].endswith('/') else '/')\n",
     "\n",
     "    with open(experiment_dir + 'args/args.txt', 'r') as f: # comes from make_data.py\n",
     "        sim_args_str = f.read()\n",
-    "\n",
+    "    \n",
+    "    print(sim_args_str)\n",
     "    sim_args = ast.literal_eval(sim_args_str)\n",
     "    p = len(sim_args['form_terms']) + len(sim_args['diss_terms'])\n",
     "\n",
@@ -366,28 +349,6 @@
     "    logging.info(f\"Data has dimension (t, n, p): ({t}, {n}, {p})\")\n",
     "    \n",
     "    return H, y, experiment_dir, sim_args"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f3fab324",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nwpos = network.network(ypos)\n",
-    "nwneg = network.network(yneg)\n",
-    "\n",
-    "fml_form = Formula('nwf ~ ' + ' + '.join(form_terms))\n",
-    "fml_diss = Formula('nwd ~ ' + ' + '.join(diss_terms))\n",
-    "fml_form.environment['nwf'] = nwpos\n",
-    "fml_diss.environment['nwd'] = nwneg\n",
-    "\n",
-    "# compute change statistic with correction\n",
-    "_lr_form = ergm.ergmMPLE(fml_form, output='array')\n",
-    "lr_form_delta = np.array(_lr_form.rx('predictor')).squeeze(axis=0)\n",
-    "_lr_diss = ergm.ergmMPLE(fml_diss, output='array')\n",
-    "lr_diss_delta = np.array(_lr_diss.rx('predictor')).squeeze(axis=0)\n"
    ]
   },
   {
